# vimeo_video_chatbot

./: .coverage  .env  .gitignore  .vercelignore  CONFIGURATION_GUIDE.md  DEPLOYMENT_STRUCTURE.md  FUNCTION_INVOCATION_FIXES.md  README.md  SERVERLESS_FIX_SUMMARY.md  WEBHOOK_AUTOMATION.md  WEBHOOK_DEBUGGING_SUMMARY.md  app.js  auto_update_embeddings.py  config.example  coverage.xml  index.html  package.json  process_videos.py  pyproject.toml  requirements.txt  run_migration.py  serve_frontend.py  start_servers.bat  start_servers.ps1  style.css  supabase_migrations.sql  supabase_migrations_complete.sql  test_chat.py  test_env.py  test_live_server.bat  test_session_management.py  vercel.json
.github/workflows/: deploy.yml
api/: index.py
app/: __init__.py  main.py
app/api/routes/: chat.py  ingest.py  pdf_ingest.py  webhooks.py
app/config/: __init__.py  security.py  settings.py
app/core/: middleware.py
app/database/: migrations.sql  supabase.py
app/models/: __init__.py  schemas.py
app/services/: chat_history_manager.py  embedding_manager.py  metadata_manager.py  pdf_ingestion.py  pdf_processor.py  pdf_store.py  retriever_chain.py  text_processor.py  transcript_manager.py  user_profile_manager.py  vector_store.py  vector_store_direct.py  vimeo_loader.py  whisper_transcriber.py
app/utils/: cache.py  logger.py
backend/: .gitignore  main.py
backend/api/: chat.py  ingest.py  pdf_ingest.py  webhooks.py
backend/core/: connection_pool.py  logging_config.py  security.py  settings.py  supabase_client.py  validation.py
backend/middleware/: rate_limiter.py
backend/modules/: chat_history_manager.py  embedding_manager.py  metadata_manager.py  pdf_processor.py  pdf_store.py  retriever_chain.py  text_processor.py  transcript_manager.py  utils.py  vector_store.py  vector_store_direct.py  vimeo_loader.py  whisper_transcriber.py
frontend/: app.js  index.html  style.css
scripts/: auto_update_embeddings.py
tests/: __init__.py
