[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vimeo-video-chatbot"
version = "1.0.0"
description = "RAG-powered chatbot for Vimeo video content with enhanced security"
authors = [
    {name = "Vimeo Chatbot Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.31.1",
    "python-dotenv>=1.0.1",
    "langchain>=0.3.1",
    "langchain-openai>=0.2.0",
    "tiktoken>=0.8.0",
    "openai>=1.50.0",
    "supabase>=2.5.1",
    "faiss-cpu>=1.8.0.post1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "requests>=2.32.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.0.3",
    "redis>=5.0.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.0.0",
    "pydub>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "httpx>=0.25.0",
    "faker>=19.0.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "faker>=19.0.0",
]

monitoring = [
    "prometheus-client>=0.19.0",
    "structlog>=23.0.0",
    "sentry-sdk[fastapi]>=1.32.0",
]

[project.urls]
Homepage = "https://github.com/example/vimeo-video-chatbot"
Repository = "https://github.com/example/vimeo-video-chatbot"
Documentation = "https://github.com/example/vimeo-video-chatbot#readme"
"Bug Tracker" = "https://github.com/example/vimeo-video-chatbot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Ruff configuration
[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused-function-args
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "Q",  # flake8-quotes
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["ARG", "S101", "TID252"]

[tool.ruff.isort]
known-first-party = ["backend"]

[tool.ruff.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_community.*",
    "langchain_openai.*",
    "supabase.*",
    "faiss.*",
    "pydub.*",
    "redis.*",
    "prometheus_client.*",
    "structlog.*",
    "jose.*",
    "passlib.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=backend",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=0",
    "--asyncio-mode=auto",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/migrations/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# Pre-commit configuration
[tool.pre-commit]

[[tool.pre-commit.repos]]
repo = "https://github.com/psf/black"
rev = "23.12.1"

  [[tool.pre-commit.repos.hooks]]
  id = "black"
  language_version = "python3"

[[tool.pre-commit.repos]]
repo = "https://github.com/charliermarsh/ruff-pre-commit"
rev = "v0.1.6"

  [[tool.pre-commit.repos.hooks]]
  id = "ruff"
  args = ["--fix", "--exit-non-zero-on-fix"]

[[tool.pre-commit.repos]]
repo = "https://github.com/pre-commit/mirrors-mypy"
rev = "v1.8.0"

  [[tool.pre-commit.repos.hooks]]
  id = "mypy"
  additional_dependencies = ["types-requests", "types-redis"]

[[tool.pre-commit.repos]]
repo = "https://github.com/pre-commit/pre-commit-hooks"
rev = "v4.5.0"

  [[tool.pre-commit.repos.hooks]]
  id = "trailing-whitespace"

  [[tool.pre-commit.repos.hooks]]
  id = "end-of-file-fixer"

  [[tool.pre-commit.repos.hooks]]
  id = "check-yaml"

  [[tool.pre-commit.repos.hooks]]
  id = "check-added-large-files"

  [[tool.pre-commit.repos.hooks]]
  id = "check-merge-conflict"
